--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -4,7 +4,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f8f9fa; /* Optional: light grey background */
+    background-color: #f8f9fa;
 }
 
 .hidden {
@@ -43,6 +43,7 @@ body{
     transform: translate(-50%, -50%);
     background: #fff;
     border-radius: 10px;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.7);
 }
 
 .container p {
@@ -69,7 +70,7 @@ body{
     border: 0;
     outline: 0;
     border-radius: 5px;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.7);
     cursor: pointer;
     margin: 20px 0;
     font-weight: 500;
@@ -81,6 +82,7 @@ body{
     max-height: 0;
     overflow: hidden;
     transition: max-height 1s;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.7);
 }
 
 #imgBox img{
